Cleanup outdated Japanese translations.

--- a/translations/ja/antoinefr-online.json
+++ b/translations/ja/antoinefr-online.json
@@ -8,8 +8,7 @@
         "admin": {
             "settings": {
                 "displaymax": "表示する数量",
-                "titleoflist": "カスタムリストのタイトル",
-                "title": "設定する"
+                "titleoflist": "カスタムリストのタイトル"
             }
         }
     }
