--- a/translations/ja/askvortsov-moderator-warnings.json
+++ b/translations/ja/askvortsov-moderator-warnings.json
@@ -48,8 +48,7 @@
                 "add_button": "警告を送る",
                 "no_warnings": "",
                 "warnings": "警告：合計 {strikes} 点",
-                "warnings_no_strikes": "警告",
-                "no-warnings": "ここには警告がないようです。"
+                "warnings_no_strikes": "警告"
             },
             "warning_list_item": {
                 "list_item_heading": "<strong>{mod_username}</strong> から警告を受けた、<strong>{strikes}</strong> 点減点",
@@ -64,9 +63,7 @@
                 "strikes_heading": "厳しさ：何点ですか？",
                 "public_comment_heading": "コメント。なぜ <strong>{username}</strong>に警告するのですか？コメントは、このユーザーと他の警告開始者にのみ表示されます。",
                 "private_comment_heading": "リマーク。なぜ <strong>{username}</strong>に警告するのですか？リマーク、あなたと他の警告開始者にのみ表示されます。",
-                "submit_button": "警告を送る",
-                "dismiss_button": "完全な",
-                "no_content_given": "空の警告は許可されていません。"
+                "submit_button": "警告を送る"
             }
         }
     }
