--- a/translations/ja/askvortsov-pwa.json
+++ b/translations/ja/askvortsov-pwa.json
@@ -10,8 +10,7 @@
                     "description_text": "説明は、管理パネルの「基本設定」ページで設定できます。",
                     "long_name_text": "",
                     "heading": "について",
-                    "short_name_text": "管理パネルの「基本設定」ページで短縮名を設定できます。",
-                    "name_text": "PWAで使用する長い名前を入力してください。"
+                    "short_name_text": "管理パネルの「基本設定」ページで短縮名を設定できます。"
                 },
                 "colors": {
                     "heading": "色",
@@ -42,8 +41,7 @@
                 "no_name": "アプリが正しく動作するには、フルネームを提供する必要があります。",
                 "key_gen_failed": "",
                 "suggest_gmp": "",
-                "success": "潜在的な問題はありません！",
-                "push_needs_gmp_and_web_push": ""
+                "success": "潜在的な問題はありません！"
             }
         },
         "forum": {
