--- a/translations/ja/clarkwinkelmann-author-change.json
+++ b/translations/ja/clarkwinkelmann-author-change.json
@@ -11,8 +11,7 @@
                 "created_at": "",
                 "edited_at": "",
                 "submit": "保存",
-                "cancel": "キャンセルする",
-                "search_placeholder": "検索ユーザ"
+                "cancel": "キャンセルする"
             },
             "search": {
                 "placeholder": "検索ユーザ",
@@ -23,8 +22,7 @@
         "admin": {
             "permissions": {
                 "edit-user": "",
-                "edit-date": "",
-                "edit": "postとレス作者を更新します。"
+                "edit-date": ""
             }
         }
     }
