--- a/translations/ja/clarkwinkelmann-carving-contest.json
+++ b/translations/ja/clarkwinkelmann-carving-contest.json
@@ -46,13 +46,11 @@
                 "view": "作品を見る",
                 "like": "好きな作品",
                 "participate": "競争に参加する",
-                "moderate": "ホスト",
-                "heading": "カービング競技"
+                "moderate": "ホスト"
             },
             "settings": {
                 "maxEntriesPerUser": "",
-                "colorMode": "",
-                "title": ""
+                "colorMode": ""
             },
             "colors": {
                 "simple": "",
