--- a/translations/ja/clarkwinkelmann-email-as-display-name.json
+++ b/translations/ja/clarkwinkelmann-email-as-display-name.json
@@ -3,12 +3,10 @@
         "admin": {
             "permissions": {
                 "view-own": "プロフィールに表示",
-                "view-all": "すべてのプロファイルで表示",
-                "heading": "名前としてのメールボックス"
+                "view-all": "すべてのプロファイルで表示"
             },
             "settings": {
-                "remove-username-registration": "登録フォームからユーザー名を削除",
-                "title": "設定する"
+                "remove-username-registration": "登録フォームからユーザー名を削除"
             }
         },
         "forum": {
