--- a/translations/ja/clarkwinkelmann-emojionearea.json
+++ b/translations/ja/clarkwinkelmann-emojionearea.json
@@ -11,9 +11,7 @@
                 "enableTones": "肌色の選択をオンにする",
                 "filtersPosition": "下部にカテゴリを表示",
                 "searchPosition": "下部に検索とスキントーンを表示する",
-                "hideFlarumButton": "FLarum 絵文字ボタンを隠す",
-                "title": "絵文字設定",
-                "hideFlarumButtonHelp": "このプラグインを有効にするには emoji プラグインが必要です"
+                "hideFlarumButton": "FLarum 絵文字ボタンを隠す"
             }
         }
     }
