--- a/translations/ja/clarkwinkelmann-first-post-approval.json
+++ b/translations/ja/clarkwinkelmann-first-post-approval.json
@@ -6,8 +6,7 @@
             },
             "settings": {
                 "discussionCount": "",
-                "postCount": "",
-                "title": ""
+                "postCount": ""
             }
         }
     }
