--- a/translations/ja/clarkwinkelmann-see-past-first-post.json
+++ b/translations/ja/clarkwinkelmann-see-past-first-post.json
@@ -10,8 +10,7 @@
             },
             "settings": {
                 "hide-comment-count": "スレッドリストのコメントカウントを非表示にする",
-                "hide-last-post": "スレッドリストの最後の投稿ユーザーと日付を非表示にする",
-                "title": "最初の投稿のみを表示 - 設定"
+                "hide-last-post": "スレッドリストの最後の投稿ユーザーと日付を非表示にする"
             }
         }
     }
