--- a/translations/ja/clarkwinkelmann-status.json
+++ b/translations/ja/clarkwinkelmann-status.json
@@ -3,8 +3,7 @@
         "admin": {
             "settings": {
                 "only-countries": "国旗のみ",
-                "enable-text": "テキストの状態を許可する",
-                "title": "状態設定"
+                "enable-text": "テキストの状態を許可する"
             },
             "permissions": {
                 "see": "状態を表示",
