--- a/translations/ja/flarum-tags.json
+++ b/translations/ja/flarum-tags.json
@@ -42,9 +42,7 @@
                 "create_secondary_tag_button": "",
                 "primary_heading": "プライマリタグ",
                 "secondary_heading": "セカンダリタグ",
-                "settings_heading": "",
-                "create_tag_button": "=> flarum-tags.ref.create_tag",
-                "settings_button": "設定"
+                "settings_heading": ""
             }
         },
         "forum": {
@@ -88,8 +86,7 @@
         },
         "ref": {
             "name": "名前",
-            "tags": "タグ",
-            "create_tag": "タグを作成"
+            "tags": "タグ"
         }
     }
 }
