--- a/translations/ja/fof-ban-ips.json
+++ b/translations/ja/fof-ban-ips.json
@@ -33,11 +33,7 @@
                 "update_title": "ブロックされた IP を更新",
                 "ban_ip_no_users": "この IP を使用している他のユーザーはいません"
             },
-            "empty_text": "禁止された IP はありません",
-            "nav": {
-                "title": "ブロック IP",
-                "desc": "ブロックされた IP アドレスを追加、削除、表示する"
-            }
+            "empty_text": "禁止された IP はありません"
         },
         "error": {
             "banned_ip_message": "検証に失敗しました",
