--- a/translations/ja/fof-best-answer.json
+++ b/translations/ja/fof-best-answer.json
@@ -18,8 +18,7 @@
                 "schedule_stop_overnight": "夜は邪魔しないでください（サーバー時間は午後 9 時から午前 8 時、リマインダーサービスは無効）",
                 "schedule_log_output": "スケジュールされたタスクの実行をログに記録します",
                 "remind_tag_ids": "特定のラベルにのみリマインダーを使用するには、ここにラベル ID を入力します（カンマ区切り）",
-                "use_alt_ui": "投稿のフッターに「ベストアンサー」の設定ボタンを表示する",
-                "title": "FoF ベストアンサー設定"
+                "use_alt_ui": "投稿のフッターに「ベストアンサー」の設定ボタンを表示する"
             }
         },
         "forum": {
@@ -38,10 +37,7 @@
                 "preferences": {
                     "awarded_best_answer": "誰かが私の投稿をベストアンサーとして設定したとき",
                     "best_answer_in_discussion": "私が参加したスレッドにベストアンサーが登場しました"
-                },
-                "best_answer_set_in_discussion_email": "",
-                "awarded_email": "投稿がベストアンサーとして設定されました",
-                "select_email_title": "問題をソートできましたか？"
+                }
             }
         },
         "email": {
