--- a/translations/ja/fof-custom-footer.json
+++ b/translations/ja/fof-custom-footer.json
@@ -5,8 +5,7 @@
                 "css": "CSS",
                 "height": "フッターの高さ",
                 "js": "JS",
-                "text": "フッターテキスト",
-                "title": "カスタムフッター"
+                "text": "フッターテキスト"
             }
         }
     }
