--- a/translations/ja/fof-drafts.json
+++ b/translations/ja/fof-drafts.json
@@ -21,8 +21,7 @@
                 "saving": "",
                 "saved": "",
                 "exit_alert": "編集した下書きを破棄しますか？",
-                "discard_empty_draft_alert": "",
-                "alert": "下書きが保存されました。"
+                "discard_empty_draft_alert": ""
             },
             "dropdown": {
                 "empty_text": "下書きがありません",
@@ -31,8 +30,7 @@
                 "schedule_button": "",
                 "tooltip": "=> fof-drafts.forum.dropdown.title",
                 "alert": "下書きを削除してもよろしいですか？",
-                "delete_all_alert": "",
-                "button": "下書きを削除"
+                "delete_all_alert": ""
             },
             "schedule_draft_modal": {
                 "title": "",
