--- a/translations/ja/fof-follow-tags.json
+++ b/translations/ja/fof-follow-tags.json
@@ -11,8 +11,7 @@
                 "unfollow_tag_button": "フォローをやめる",
                 "following": {
                     "following_none_label": "",
-                    "following_tags_label": "",
-                    "following_all_label": ""
+                    "following_tags_label": ""
                 }
             },
             "badge": {
@@ -50,9 +49,7 @@
             "settings": {
                 "following_page_default_label": "",
                 "following_none_label": "",
-                "following_tags_label": "",
-                "title": "",
-                "following_all_label": ""
+                "following_tags_label": ""
             }
         },
         "email": {
@@ -65,10 +62,7 @@
                 "newDiscussionInTag": "",
                 "newPostInTag": "",
                 "newDiscussionTag": ""
-            },
-            "newDiscussionInTag": "[Tag | New Discussion] タイトル",
-            "newPostInTag": "[Tag | New Post] タイトル",
-            "newDiscussionTag": ""
+            }
         },
         "ref": {
             "follow": "フォロー",
@@ -78,8 +72,7 @@
             "lurking": "ラークする",
             "filtering_options": {
                 "none": "",
-                "tags": "",
-                "all": ""
+                "tags": ""
             }
         }
     }
