--- a/translations/ja/fof-forum-statistics-widget.json
+++ b/translations/ja/fof-forum-statistics-widget.json
@@ -13,8 +13,7 @@
             "settings": {
                 "widget_ignore_private_discussions_label": "",
                 "widget_order_label": "Widget の順序",
-                "widget_helper_text": "この設定を編集して、フォーラムサイドバーの widget の位置を調整します。 値が大きいほど、位置が高くなります（この値は負になる場合があります）。",
-                "title": "Widget 設定"
+                "widget_helper_text": "この設定を編集して、フォーラムサイドバーの widget の位置を調整します。 値が大きいほど、位置が高くなります（この値は負になる場合があります）。"
             },
             "permissions": {
                 "view_discussions_count_label": "",
