--- a/translations/ja/fof-gamification.json
+++ b/translations/ja/fof-gamification.json
@@ -28,8 +28,7 @@
             },
             "modal": {
                 "title": "有権者",
-                "upvotes_label": "サポーター",
-                "downvotes_label": "相手"
+                "upvotes_label": "サポーター"
             },
             "mod_item": "有権者を表示"
         },
@@ -83,9 +82,6 @@
                         "name": "お名前"
                     }
                 }
-            },
-            "nav": {
-                "desc": "Flarum フォーラムのゲームプレイを強化する"
             }
         }
     }
