--- a/translations/ja/fof-geoip.json
+++ b/translations/ja/fof-geoip.json
@@ -13,8 +13,7 @@
                 "service_ipapi_label": "IP Api",
                 "service_ipapi_description": "<b>http://ip-api.com</b>，1 分あたり 150 クエリが無料です。過剰なリクエストはあなたの IP をブラックリストに載せるかもしれません。<b>http://ip-api.com/docs/unban</b> で削除をリクエストできます。",
                 "access_key_label": "Access Key",
-                "security_label": "セキュリティモジュール（professional plus が必要）",
-                "service__description": "Choose a IP service."
+                "security_label": "セキュリティモジュール（professional plus が必要）"
             }
         },
         "forum": {
