--- a/translations/ja/fof-github-sponsors.json
+++ b/translations/ja/fof-github-sponsors.json
@@ -10,8 +10,7 @@
                 "api_token_label": "",
                 "account_type_label": "",
                 "login_label": "",
-                "group_label": "",
-                "title": ""
+                "group_label": ""
             }
         }
     }
