--- a/translations/ja/fof-linguist.json
+++ b/translations/ja/fof-linguist.json
@@ -47,10 +47,7 @@
                 "frontend": "",
                 "frontend-all-except-admin": "",
                 "mass-edit": "",
-                "results": "{shown} のうち{shown}個の一致する翻訳を表示しています",
-                "for-extension-unavailable": "予想されるネームスペース「{namespace}」に翻訳が見つかりませんでした。 このプラグインには、翻訳するコンテンツや別のネームスペースを使用するコンテンツがない場合があります。 検索フィールドを使用して、翻訳を見つけてみてください。\n",
-                "with-original-translations-in-locales": "元の翻訳",
-                "without-original-translations-in-locales": "元の翻訳なし"
+                "results": "{shown} のうち{shown}個の一致する翻訳を表示しています"
             },
             "clear-cache": {
                 "text": "新しい翻訳はまだ適用されていません。 Note: キャッシュをクリアすると、フォーラムが一時的に遅くなる可能性があります。\n",
@@ -114,10 +111,6 @@
                 "lib": "",
                 "ref": "",
                 "api": ""
-            },
-            "menu": {
-                "title": "翻訳する",
-                "description": "カスタム翻訳"
             }
         }
     }
