--- a/translations/ja/fof-links.json
+++ b/translations/ja/fof-links.json
@@ -17,17 +17,11 @@
                 "icon_text": "",
                 "url_label": "=> fof-links.ref.url",
                 "url_placeholder": "=> fof-links.ref.url",
-                "visibility": "",
-                "registered_only": ""
+                "visibility": ""
             },
             "links": {
                 "create_button": "=> fof-links.ref.create_link",
-                "links": "=> fof-links.ref.links",
-                "about_text": "ナビゲーリンクの管理"
-            },
-            "nav": {
-                "links_button": "=> fof-links.ref.links",
-                "links_text": "ナビゲーリンクの管理"
+                "links": "=> fof-links.ref.links"
             }
         },
         "ref": {
