--- a/translations/ja/fof-mason.json
+++ b/translations/ja/fof-mason.json
@@ -55,9 +55,7 @@
                 "save-field-for-answers": "このフィールドを保存して回答を追加してください",
                 "is_suggested": "ユーザーに提案を表示する",
                 "new-answer": "",
-                "new-answer-placeholder": "一部のテキスト",
-                "min_answers_count": "回答の最小数",
-                "max_answers_count": "回答の最大数"
+                "new-answer-placeholder": "一部のテキスト"
             },
             "messages": {
                 "delete-answer-confirmation": "回答「{content}」を削除しますか？ これは、それを使用するすべての投稿から削除されます。既存の回答を保持する場合は、回答の提案を無効にしてください。 回答を削除しますか？\n",
@@ -91,12 +89,7 @@
                 "fill-fields": "新しいトピックのフィールドに入力する",
                 "update-own-fields": "自分のディスカッションのフィールドを更新する",
                 "update-other-fields": "件名フィールドを更新する",
-                "skip-required-fields": "必須フィールドのスキップを許可する",
-                "mason-heading": "Mason"
-            },
-            "menu": {
-                "title": "",
-                "description": "カスタム投稿フィールドを設定する\n"
+                "skip-required-fields": "必須フィールドのスキップを許可する"
             }
         }
     }
