--- a/translations/ja/fof-nightmode.json
+++ b/translations/ja/fof-nightmode.json
@@ -12,9 +12,7 @@
                     "default_theme_helper": "",
                     "theme_auto": "",
                     "theme_light": "",
-                    "theme_dark": "",
-                    "title": "",
-                    "default_theme_important": ""
+                    "theme_dark": ""
                 }
             }
         },
