--- a/translations/ja/fof-pages.json
+++ b/translations/ja/fof-pages.json
@@ -20,8 +20,7 @@
                 "url_placeholder": "=> fof-pages.ref.url"
             },
             "pages": {
-                "create_button": "=> fof-pages.ref.create_page",
-                "about_text": "静的なカスタムページを作成し、管理する"
+                "create_button": "=> fof-pages.ref.create_page"
             },
             "pages_list": {
                 "empty_text": "ページが存在しないようです",
@@ -33,10 +32,6 @@
             "badges": {
                 "hidden": "下書き",
                 "restricted": "アクセス制限がある"
-            },
-            "nav": {
-                "pages_button": "=> fof-pages.ref.pages",
-                "pages_text": "静的なカスタムページを作成する"
             }
         },
         "ref": {
