--- a/translations/ja/fof-recaptcha.json
+++ b/translations/ja/fof-recaptcha.json
@@ -5,8 +5,7 @@
                 "help_text": "<a>ここで</a> Google reCAPTCHA 証明書を取得する。",
                 "secret_key_label": "Secret Key",
                 "site_key_label": "Site Key",
-                "type_label": "reCAPTCHA 種類",
-                "title": ""
+                "type_label": "reCAPTCHA 種類"
             },
             "permissions": {
                 "post_without_captcha": ""
