--- a/translations/ja/fof-secure-https.json
+++ b/translations/ja/fof-secure-https.json
@@ -2,8 +2,7 @@
     "fof-secure-https": {
         "admin": {
             "settings": {
-                "replace": "HTTPS 経由のプロキシイメージ",
-                "title": "設定"
+                "replace": "HTTPS 経由のプロキシイメージ"
             }
         },
         "forum": {
