--- a/translations/ja/fof-share-social.json
+++ b/translations/ja/fof-share-social.json
@@ -2,8 +2,7 @@
     "fof-share-social": {
         "admin": {
             "settings": {
-                "canonical-urls": "",
-                "title": "FoF ソーシャルシェアリング"
+                "canonical-urls": ""
             }
         },
         "forum": {
