--- a/translations/ja/fof-user-directory.json
+++ b/translations/ja/fof-user-directory.json
@@ -15,21 +15,7 @@
                 "refresh_tooltip": "",
                 "load_more_button": "",
                 "empty_text": "",
-                "filter_button": "",
-                "sort": {
-                    "relevance": "関係性",
-                    "default": "デフォルト",
-                    "username_az": "ユーザーネーム (a-z)",
-                    "username_za": "ユーザーネーム (z-a)",
-                    "newest": "最新",
-                    "oldest": "最古",
-                    "seen_recent": "最近までオンライン",
-                    "seen_oldest": "最長オフライン",
-                    "most_posts": "最多投稿",
-                    "least_posts": "最少投稿",
-                    "most_discussions": "最多スレッド",
-                    "least_discussions": "最少スレッド"
-                }
+                "filter_button": ""
             }
         },
         "admin": {
@@ -39,8 +25,7 @@
             "settings": {
                 "link": "ユーザーが見えるユーザーリストのリンクをホームページに表示する",
                 "default-sort": "",
-                "use-small-cards": "",
-                "title": "ユーザーリスト設定"
+                "use-small-cards": ""
             }
         },
         "lib": {
@@ -54,9 +39,7 @@
                 "most_posts": "",
                 "least_posts": "",
                 "most_discussions": "",
-                "least_discussions": "",
-                "seen_recent": "",
-                "seen_oldest": ""
+                "least_discussions": ""
             }
         }
     }
