--- a/translations/ja/glowingblue-password-strength.json
+++ b/translations/ja/glowingblue-password-strength.json
@@ -11,22 +11,14 @@
                 "otherOptions": "",
                 "enableInputColor": "パスワードボックスのテキストの色を強度の色の変化に合わせます",
                 "enableInputBorderColor": "",
-                "enablePasswordToggle": "",
-                "enableLabel": "強度のヒントを表示",
-                "displayMode": "リマインダーを選択してください",
-                "enableInputBackground": "パスワードボックスの背景色を強度の色の変化に追従させます",
-                "noInputColor": "パスワードボックスの色を変更しないでください",
-                "foreColor": "パスワード入力ボックスのテキストの色"
+                "enablePasswordToggle": ""
             }
         },
         "forum": {
             "strengthLabels": {
                 "weak": "弱い",
                 "medium": "",
-                "strong": "強い",
-                "veryWeak": "とても弱い",
-                "average": "平均",
-                "veryStrong": "とても強い"
+                "strong": "強い"
             }
         }
     }
