--- a/translations/ja/ianm-html-head.json
+++ b/translations/ja/ianm-html-head.json
@@ -16,8 +16,7 @@
                 "text": "",
                 "description_label": "",
                 "header_label": "",
-                "save_button": "",
-                "title": ""
+                "save_button": ""
             }
         }
     }
