--- a/translations/ja/itnt-uitab.json
+++ b/translations/ja/itnt-uitab.json
@@ -3,14 +3,7 @@
         "admin": {
             "settings": {
                 "help_text": "",
-                "home_page_label": "",
-                "requirement": "",
-                "title": "",
-                "tags_title": "",
-                "tags_page_label": "",
-                "create_page_label": "",
-                "settings_page_label": "",
-                "notifications_page_label": ""
+                "home_page_label": ""
             }
         }
     }
