--- a/translations/ja/maicol07-sso.json
+++ b/translations/ja/maicol07-sso.json
@@ -13,9 +13,7 @@
                 "jwt_section_subtitle": "",
                 "jwt_iss": "",
                 "jwt_signer_key": "",
-                "jwt_signing_algorithm": "",
-                "disable_login_btn": "ログインボタンを無効にする",
-                "disable_signup_btn": "サインアップボタンを無効にする"
+                "jwt_signing_algorithm": ""
             }
         },
         "forum": {
