--- a/translations/ja/michaelbelgium-profile-views.json
+++ b/translations/ja/michaelbelgium-profile-views.json
@@ -9,16 +9,7 @@
         "admin": {
             "settings": {
                 "track_guests_label": "",
-                "max_viewcount_label": "",
-                "title": ""
-            }
-        }
-    },
-    "flarum_profile_views": {
-        "forum": {
-            "user": {
-                "title_last_viewers": "最後の訪問者",
-                "views_count_text": "{viewcount} 回閲覧しました|{viewcount} 回閲覧しました"
+                "max_viewcount_label": ""
             }
         }
     }
