--- a/translations/ja/therealsujitk-gifs.json
+++ b/translations/ja/therealsujitk-gifs.json
@@ -13,12 +13,7 @@
         },
         "admin": {
             "gifs": {
-                "giphyAPIkey": "Giphy API Key",
-                "title": "GIF API 設定"
-            },
-            "about": {
-                "stringA": "プラグイン作成者：",
-                "stringB": "寄付する："
+                "giphyAPIkey": "Giphy API Key"
             }
         }
     }
