--- a/translations/ja/therealsujitk-hljs.json
+++ b/translations/ja/therealsujitk-hljs.json
@@ -2,12 +2,7 @@
     "therealsujitk": {
         "admin": {
             "hljs": {
-                "themename": "テーマスタイル（プレビュー：http://t.cn/A6ZtzMiG）",
-                "title": "highlight.js 設定"
-            },
-            "about": {
-                "stringA": "プラグイン作成者：",
-                "stringB": "寄付する："
+                "themename": "テーマスタイル（プレビュー：http://t.cn/A6ZtzMiG）"
             }
         }
     }
