--- a/translations/ja/therealsujitk-show-password.json
+++ b/translations/ja/therealsujitk-show-password.json
@@ -6,12 +6,7 @@
         "admin": {
             "show_password_type": "",
             "show_password_checkbox": "",
-            "show_password_icon": "",
-            "show_password_title": "",
-            "about": {
-                "stringA": "プラグイン作成者：",
-                "stringB": "寄付する："
-            }
+            "show_password_icon": ""
         }
     }
 }
