--- a/translations/ja/clarkwinkelmann-bookmarks.json
+++ b/translations/ja/clarkwinkelmann-bookmarks.json
@@ -17,8 +17,7 @@
         },
         "admin": {
             "settings": {
-                "independentButton": "",
-                "title": ""
+                "independentButton": ""
             }
         }
     }
