--- a/translations/ja/clarkwinkelmann-group-list.json
+++ b/translations/ja/clarkwinkelmann-group-list.json
@@ -7,8 +7,7 @@
             "settings": {
                 "showSideNavLink": "",
                 "showAvatarBadges": "",
-                "showOnlineStatus": "",
-                "title": ""
+                "showOnlineStatus": ""
             },
             "items": {
                 "add": ""
