--- a/translations/ja/clarkwinkelmann-passwordless.json
+++ b/translations/ja/clarkwinkelmann-passwordless.json
@@ -14,8 +14,7 @@
                 "passwordless-login-by-default": "デフォルトのログイン方法としてのパスワードなしのログイン",
                 "hide-sign-up-password": "登録フォームのパスワードフィールドを非表示",
                 "token-life": "Token ライフサイクル（分）",
-                "mail-footer": "メッセージのフッターテキスト",
-                "title": "パスワードなしのログイン設定"
+                "mail-footer": "メッセージのフッターテキスト"
             }
         },
         "api": {
