--- a/translations/ja/clarkwinkelmann-who-read.json
+++ b/translations/ja/clarkwinkelmann-who-read.json
@@ -37,8 +37,7 @@
                 "see-read": "「読書の進捗」の閲覧を許可する",
                 "see-subscription": "サブスクリプションステータスの閲覧を許可する",
                 "see-unread": "他のユーザーの未読ステータスを見る",
-                "mark-unread": "ユーザーがスレッドを未読としてマークできるようにする",
-                "heading": "Who Read"
+                "mark-unread": "ユーザーがスレッドを未読としてマークできるようにする"
             },
             "settings": {
                 "show-in-discussion-list": "ホームページのスレッドリストに読者を表示する",
@@ -48,8 +47,7 @@
                 "hide-when-behind": "読書の進捗が非常に遅いユーザーを表示しない（単位：ポスト）値が1の場合、ユーザーがスレッドに未読の投稿を1つ持っている限り、彼/彼女は読者リストに表示されません。この値をクリアすると、デフォルトに戻ります。",
                 "max-visible": "スレッドバナーに表示するリーダーの最大数を設定します（この数を超えた後、完全なリストを表示するには展開ボタンをクリックする必要があります）",
                 "unread-icon": "アバターの未読バッジアイコン",
-                "only-groups": "グループユーザーの読書の進行状況のみを表示する",
-                "title": "読書の進捗 - 設定"
+                "only-groups": "グループユーザーの読書の進行状況のみを表示する"
             }
         }
     }
