--- a/translations/ja/fof-discussion-language.json
+++ b/translations/ja/fof-discussion-language.json
@@ -21,8 +21,7 @@
                 "native_label": "母語を使う",
                 "show_flag_label": "",
                 "composer_default_label": "",
-                "locale_sort_label": "",
-                "title": "FoF スレッド言語"
+                "locale_sort_label": ""
             },
             "permissions": {
                 "allow_change_language_label": "許可された編集言語"
