--- a/translations/ja/fof-moderator-notes.json
+++ b/translations/ja/fof-moderator-notes.json
@@ -18,9 +18,7 @@
                 "noNotes": "伝言は一つもないですが。最初の一人になりたいですか？",
                 "submit_button": "保存",
                 "delete": "",
-                "confirm": "",
-                "no_content_given": "空の伝言を投稿できません。",
-                "confirmation_message": "伝言成功！ 表示するには、ページを更新する必要がある場合があります。"
+                "confirm": ""
             },
             "user": {
                 "notes": "伝言板"
@@ -29,9 +27,7 @@
         "api": {
             "auto_note": "",
             "auto_note_actor": "",
-            "no_reason_provided": "",
-            "auto-note": "FoF Impersonateを使って、このユーザーに乗り換えました。",
-            "auto-note-actor": "'ユーザー名'の代わりにFoF Impersonateを使用します。"
+            "no_reason_provided": ""
         }
     }
 }
