--- a/translations/ja/kilowhat-audit-pro.json
+++ b/translations/ja/kilowhat-audit-pro.json
@@ -8,14 +8,7 @@
                 "title": "",
                 "free": "",
                 "pro": "",
-                "upgrade": "",
-                "documentation": "",
-                "discuss": "",
-                "version": ""
-            },
-            "menu": {
-                "title": "",
-                "description": ""
+                "upgrade": ""
             }
         },
         "forum": {
