--- a/translations/ja/tituspijean-auth-ldap.json
+++ b/translations/ja/tituspijean-auth-ldap.json
@@ -22,23 +22,7 @@
                 "follow_referrals": "紹介に従う",
                 "use_ssl": "SSL を使用",
                 "use_tls": "TLS を使用",
-                "onlyUse": "Flarum ログインを無効にし、LDAP 認証のみを使用します",
-                "field": {
-                    "method_name": "LDAP サーバー名 (「Login with」の後に表示されます)",
-                    "hosts": "",
-                    "base_dn": "ベース DN",
-                    "filter": "",
-                    "port": "ポート",
-                    "account_prefix": "アカウントのプレフィックス",
-                    "account_suffix": "アカウントのサフィックス",
-                    "admin_dn": "LDAP 管理識別名",
-                    "admin_password": "LDAP 管理パスワード",
-                    "search_user_fields": "",
-                    "user_mail": "",
-                    "user_username": "",
-                    "domain_controllers": "LDAP ドメイン (英語のコンマ区切り)"
-                },
-                "use_admin": "LDAP 管理者アカウントに接続します"
+                "onlyUse": "Flarum ログインを無効にし、LDAP 認証のみを使用します"
             }
         }
     }
